--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
       href="images/icons8-social-post-16.png"
     />
     <link rel="stylesheet" href="style.css" crossorigin="anonymous" />
-    <title>TxTBx - Social Media Post Creator</title>
+    <title>PostBliss- Social Media Post Creator</title>
   </head>
 
   <body>
@@ -146,7 +146,7 @@
     </div>
     <div class="footer">
       <p>
-        Designed and Developed by <span>Dhruv Arora</span>.
+        Designed and Developed by <span>Vansh Suneja</span>.
         <i class="fa-regular fa-copyright"></i> <%= currentYear %> All Rights Reserved
       </p>
     </div>
