--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,9 +38,7 @@
 
   <body>
     <h1>
-      T<span><i class="fa-solid fa-xmark"></i></span>TB<span
-        ><i class="fa-solid fa-xmark"></i
-      ></span>
+      <span>PostBliss</span>
     </h1>
     <hr />
     <div class="main-content">
